--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,3 +5,5 @@ $light-green: #4caf50;
 $dark-green: #189323;
 $background-color: #f5f5f5;
 $white-font: white;
+$app-font: "Roboto", sans-serif !important;
+$bold-font-weight: 570;
