--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,9 +12,13 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif !important;
   color: $dark-grey;
   box-sizing: border-box;
+  font-family: $app-font;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: $bold-font-weight;
 }
 
 body {
@@ -80,6 +84,7 @@ footer {
 }
 
 .primary-button {
+  font-family: m3-theme.$app-font;
   margin: 0.5em;
   padding: 0.1em 0.1em;
   font-size: 1em;
@@ -112,8 +117,9 @@ footer {
   }
 }
 .nav-button {
+  font-family: m3-theme.$app-font;
   margin: 0.5em;
-  padding: 0.8em 2em;
+  padding: 0.8em 1em;
   font-size: 1em;
   border: none;
   border-radius: 5px;
@@ -146,4 +152,29 @@ button mat-icon {
 
 .nav-container {
   align-content: center;
+}
+
+mat-expansion-panel mat-expansion-panel-header mat-panel-title {
+  font-family: m3-theme.$app-font;
+}
+mat-form-field{
+  font-family: m3-theme.$app-font;
+}
+mat-label{
+  font-family: m3-theme.$app-font;
+}
+mat-select {
+  font-family: m3-theme.$app-font;
+}
+mat-option {
+  font-family: m3-theme.$app-font;
+}
+mat-radio-group *{
+  font-family: m3-theme.$app-font;
+}
+mat-slide-toggle *{
+  font-family: m3-theme.$app-font;
+}
+mat-checkbox * {
+  font-family: m3-theme.$app-font;
 }
